before images upload

--- a/app/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/app/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -24,7 +24,7 @@
         type="button"
         class="delete"
         title="delete hero"
-        (click)="delete(hero)"
+        (click)="remove(hero)"
       >
         x
       </button>
